Fixed clashing 'Gig calendar' text on gig calendar page, but there are sizing and spacing problems with the main container still.

--- a/gig_calendar/static/gig_calendar/style.css
+++ b/gig_calendar/static/gig_calendar/style.css
@@ -40,8 +40,7 @@ h1, h2, h3, h4 {
 .gig-calendar h1 {
     font-family: 'EB Garamond', serif;
     font-size: 50pt;
-    margin-left: 35%;
-    padding-bottom: 50px;
+    color: black;
 }
 
 .gig-date-day {
